# agent-sandbox-controller

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: verify-pidshare.yaml
src/: agent.rs  bundle.rs  main.rs  reconcile.rs  safe_path.rs  server.rs  sync.rs  telemetry.rs
